[package]
name = "vyges-gds-view"
version = "0.1.5"
edition = "2021"
description = "Headless GDS layout viewer: a GDS in, a layered SVG out — with optional violation overlay."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/gds-view"

# No third-party deps (builds/tests offline). The GDS / geometry kernel comes from
# the vyges-layout foundation — the same kernel vyges-lvs and vyges-drc ride on.
[dependencies]
vyges-layout = { git = "https://github.com/vyges-tools/layout", branch = "main" }

[[bin]]
name = "vyges-gds-view"
path = "src/main.rs"

[lib]
name = "vyges_gds_view"
path = "src/lib.rs"
